# particles

./: .clang-format-runner-ignore  .clang-tidy  CMakeLists.txt  ProjectOptions.cmake
cmake/: Cache.cmake  CheckMinimumToolRequirements.cmake  CompilerWarnings.cmake  Doxygen.cmake  GetParticlesSources.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake
cpuTest/: CMakeLists.txt  cpuTest.cpp  fake_glParticleRenderer.cpp
include/particles/: effect.cppm  particle_generators.cppm  particle_updaters.cppm  particle_updaters.h  particles.cppm  particles.h
include/particles/effects/: attractor_effect.cppm  attractor_effect.h  effect.cppm  effect.h  fountain_effect.cppm  fountain_effect.h  tunnel_effect.cppm  tunnel_effect.h
particlesCode/: attractorEffect.cpp  attractorEffect.h  effect.cpp  effect.h  fountainEffect.cpp  fountainEffect.h  glParticleRenderer.cpp  glParticleRenderer.h  particleGenerators.cpp  particleGenerators.h  particleRenderer.cpp  particleRenderer.h  particleUpdaters.cpp  particleUpdaters.h  particles.cpp  particles.h  tunnelEffect.cpp  tunnelEffect.h
src/particles/: particleGenerators.cpp  particleGenerators.h  particleUpdaters.cpp  particleUpdaters.h  particle_generators.cpp  particle_generators.h  particle_updaters.cpp  particle_updaters.h  particles.cpp  particles.h
src/particles/effects/: attractorEffect.cpp  attractorEffect.h  attractor_effect.cpp  attractor_effect.h  effect.h  fountainEffect.cpp  fountainEffect.h  fountain_effect.cpp  fountain_effect.h  tunnelEffect.cpp  tunnelEffect.h  tunnel_effect.cpp  tunnel_effect.h
test/cpuTest/: CMakeLists.txt  cpuTest.cpp
test/cpu_test/: CMakeLists.txt  attractor_effect.cpp  attractor_effect.cppm  cpu_test.cpp  fountain_effect.cpp  fountain_effect.cppm  tunnel_effect.cpp  tunnel_effect.cppm
